Basic implementation of new "world-less" header

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -60,13 +60,13 @@
     }
   }
 
-  .Distributor__advanced-filter-trigger-wrapper {
-    position: absolute;
-    right: 0;
-  }
+  //.Distributor__advanced-filter-trigger-wrapper {
+  //  position: absolute;
+  //  right: 0;
+  //}
 
   .search-form--input-wrapper {
-    right: 60px;
+    right: 80px;
 
     body.ar & {
       left: 60px;
