--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -23,10 +23,11 @@
   }
 
   .Logo {
-    position: absolute;
+    position: relative;
     bottom: 32px;
     z-index: 20;
     margin-top: 5px;
+    margin-bottom: 7px;
     margin-left: 15px;
     width: 91px;
     height: 20px;
@@ -75,7 +76,7 @@
     right: 0;
     left: 0;
     z-index: 130;
-    background: transparent;
+    background: $brand_beige;
     min-height: 0;
 
     .template--pages-home & {
