--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -6,12 +6,11 @@
 
 #new_search_form {
   @extend %clearfix;
-  padding: 22px 0 0 25px;
-  width: 700px;
+  padding: 29px 25px 0;
   list-style: none;
 
   body.ar & {
-    padding: 22px 25px 0 0;
+    padding: 29px 25px 0 0;
   }
 
   .input {
@@ -19,6 +18,8 @@
       position: relative;
       display: inline-block;
       float: left;
+      width: 45.165%;  // temp
+
 
       body.ar & {
         float: right;
@@ -87,7 +88,7 @@
 #search_form_search_location {
   margin-right: 10px;
   padding: 0 15px 0 15px;
-  max-width: 288px;
+  //max-width: 288px;
   background: $brand_white;
   font-size: 20px;
   line-height: 47px;
@@ -116,7 +117,7 @@
 }
 
 #search_form_query {
-  width: 288px;
+  //max-width: 328px;
   padding-left: 62px;
 
   body.en & {
@@ -137,8 +138,12 @@
   }
 }
 
+#search_form_query,
 #search_form_search_location {
-  width: 278px;
+  width: calc(100% - 10px);
+}
+
+#search_form_search_location {
   padding-left: 52px;
   border-radius: 0;
 
@@ -190,6 +195,8 @@
 .main-search__submit {
   @extend %clarat_rounding_end;
 
+  float: right;
+
   body.ar & {
     border-bottom-right-radius: 0; // reset
     @extend %clarat_rounding_start;
@@ -197,18 +204,25 @@
 }
 
 .main-search__advanced-filter {
-  position: absolute;
-  vertical-align: middle;
+  font-size: 18px;
   color: $brand_brown;
   text-decoration: none;
-  font-size: 12px;
-  transform: translate(0, -50%);
-  top: 50%;
+  padding-left: 30px;
+  background: no-repeat left center;
+  margin-left: 25px;
+  margin-top: 8px;
 
-  .overlay-active & {
-    background: $brand_yellow;
-    padding: 15px;
-    margin-left: -15px;
+  body.refugees &,
+  body.family & {
+    background-color: transparent;
+  }
+
+  &[aria-expanded="false"] {
+    background-image:  image-url('ico_advsearch_expand.svg');
+  }
+
+  &[aria-expanded="true"] {
+    background-image:  image-url('ico_advsearch_collapse.svg');
   }
 
 }
