--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -5,15 +5,11 @@ header.header-main
     .mascot.mascot--header
 
     .Distributor.Distributor--navigation
-      nav.nav-welt.nav-welt--notstart
-        ul.nav-welt__list
-          - SectionFilter::IDENTIFIER.each do |section|
-            li.nav-welt__listitem.nav-welt__listitem--start.tooltip--welcome.tooltip--welt[class="tooltip--welt-#{section}" title=t("shareds.tooltips.welcome.world_switch.#{section}")]              = link_to section, offers_path(section: section),
-                        id: "clarat--#{section}"
+
       = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short,
                                              current_section: current_section
       .Distributor__advanced-filter-trigger-wrapper.tooltip--welcome.tooltip--advancedsearch[title=t('shareds.tooltips.welcome.advanced_search') href='#']
-        a.main-search__advanced-filter[href='#']
-          = t('js.search.form_more_label')
+        button.main-search__advanced-filter[aria-expanded="false"]
+           = t('js.search.form_more_label')
 
