fix failing tests

--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -17,6 +17,6 @@
       p = t 'pages.shared.address.telephone'
       p = t 'pages.shared.address.fax'
       p = link_to('post@clarat.org', 'mailto:post@clarat.org')
-      p = link_to root_url
+      p = link_to section_choice_url
 
       p = t '.responsible_html'
