--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar)?'rtl':'ltr'}"
         = render 'layouts/partials/navigation',
                 search_form: SearchForm.new(cookies),
                 current_section: @current_section
-      - elsif controller_name == 'pages' && action_name != 'section_choice'
+      - elsif action_name != 'section_choice'
         = render 'layouts/partials/search_navigation',
                  search_form: @search_form || SearchForm.new(cookies),
                  current_section: @current_section
