--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,9 +32,9 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar)?'rtl':'ltr'}"
                      content: message[1]
       - if controller_name == 'pages' && action_name == 'home'
         = render 'layouts/partials/navigation',
-                 search_form: SearchForm.new(cookies),
-                 current_section: @current_section
-      - else
+                search_form: SearchForm.new(cookies),
+                current_section: @current_section
+      - elsif action_name != 'section_choice'
         = render 'layouts/partials/search_navigation',
                  search_form: @search_form || SearchForm.new(cookies),
                  current_section: @current_section
@@ -48,4 +48,3 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar)?'rtl':'ltr'}"
 
     = render 'layouts/partials/general_assets'
     = content_for :view_specific_scripts
-
