Finish on desktop, mediaquery XL: select, type select

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,8 @@
 @import "modules/emailinfo";
 @import "modules/tablist";
 @import "modules/hint";
+@import "modules/type-results";
+@import "modules/result-order";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
