--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -99,22 +99,15 @@
   cursor: pointer;
   min-height: 30px;
   line-height: 27px;
-  padding-bottom: 15px;
   background-position: 15px center;
   background-repeat: no-repeat;
   position: relative;
 
-  &::after {
-    content: '';
-    position: absolute;
-    right: 50%;
-    transform: translate(50%, 0);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    pointer-events: none;
+  span {
+    display: inline-block;
+    padding-left: 25px;
     background-image: image-url('ico_fieldset_expand--ondark.svg');
-    background-position: center 82%;
+    background-position: left 50%;
     background-repeat: no-repeat;
     background-size: 15px auto;
   }
