clarat-org/clarat#914 - added new pictures and texts for about-us page

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -10,7 +10,7 @@
         - @names.each do |name|
           .section-team__member
             .section-team__name
-              = name.titleize
+              = name.split('_').first.titleize
             = image_tag image_path("team/#{name}.jpg"),
                         class: 'section-team__profile'
             p = t ".#{name}"
