Feature/884 make more languages great again (#924)
* Basic implementation of expand indicator within section content

* Style single centered arrow proposal

* Style single floating arrow proposal

* Add expanded accordeon state to proposal in last commit

--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -107,7 +107,23 @@
   width: 100%;
   cursor: pointer;
   min-height: 30px;
-  line-height: 30px;
+  line-height: 27px;
+  background-position: 15px center;
+  background-repeat: no-repeat;
+  position: relative;
+
+  span {
+    display: inline-block;
+    padding-left: 25px;
+    background-image: image-url('ico_fieldset_expand--ondark.svg');
+    background-position: left 50%;
+    background-repeat: no-repeat;
+    background-size: 15px auto;
+
+    .section-content__wrapper.is-expanded + & {
+      background-image: image-url('ico_fieldset_collapse--ondark.svg');
+    }
+  }
 }
 
 .offer-contribute {
