for #922 - sort orgas alphabetically

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -76,10 +76,10 @@
               #big-map
                 button.big-map_close X
             = render 'offers/show/who_location', offer: @offer,
-                                               markers: @markers
+                                                 markers: @markers
 
           ul.Listing-organizations__list
-            - @offer.organizations.each do |orga|
+            - @offer.organizations.order(:name).each do |orga|
               li.Listing-organizations__link
                 = link_to orga.name, organization_path(id: orga)
 
