Hotfix for section choice page on windows in layout "xl"

--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -161,7 +161,7 @@
   }
 
   .section-choice__stage {
-    background-size: 100% 100%;
+    background-size: auto 100%;
   }
 
   .section-choice__container {
