--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -2,18 +2,19 @@ section.section-content.section-content--when
   h3.section-content__title = t '.heading'
   .section-content__body
     - if offer.openings.any?
-      /! use http://microformats.org/wiki/opening-hours once specified
-      table.Table
-        - OpeningHash.new(offer).each_open_day do |day, times|
-          tr
-            th
-              = t(".days.#{day}") + ':'
-            td dir='ltr'
-              - times.sort.each do |time|
-                time.Table__time = time
-                / @todo extend to using https://schema.org/LocalBusiness
-                / itemprop="openingHours", datetime attr
-                / https://schema.org/openingHours
+      - cache [offer, 'openings', offer.openings.pluck(:id).join(',')] do
+        /! use http://microformats.org/wiki/opening-hours once specified
+        table.Table
+          - OpeningHash.new(offer).each_open_day do |day, times|
+            tr
+              th
+                = t(".days.#{day}") + ':'
+              td dir='ltr'
+                - times.sort.each do |time|
+                  time.Table__time = time
+                  / @todo extend to using https://schema.org/LocalBusiness
+                  / itemprop="openingHours", datetime attr
+                  / https://schema.org/openingHours
 
     - if offer.opening_specification? && offer.openings.any?
       br
