(Work in progress - switching computers)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,7 @@
 @import "modules/section-choice";
 @import "modules/type-results";
 @import "modules/result-order";
+@import "modules/top-bar";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
