--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -17,6 +17,7 @@ $brand_orange: #F78300;
 $brand_blue: #87A6AE;
 $brand-grey: #C3BFB1;
 $brand-violet: #a586bb;
+$brand_coal: #666666;
 
 $font_color: $brand_brown;
 
