--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,7 +23,8 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar)?'rtl':'ltr'}"
     .page-wrap
       - cache ['banner', I18n.locale] do
         = render '/layouts/partials/banner'
-      = render '/layouts/partials/nav_lang'
+      // = render '/layouts/partials/nav_lang'
+      = render '/layouts/partials/top_bar'
       #Flash-messages
         - flash.each do |message|
           - unless message[0] == 'timedout'
