--- a/app/assets/stylesheets/modules/_top-bar.scss
+++ b/app/assets/stylesheets/modules/_top-bar.scss
@@ -33,6 +33,7 @@
   top: 46px;
   right: 0;
   left: 0;
+  z-index: 4001;
 
   &[aria-hidden="true"] {
     display: none;
@@ -77,14 +78,7 @@
   z-index: 40000 !important;
   margin: 0;
   padding: 0;
-
-  a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 0 15px;
-    line-height: 48px;
-  }
+  box-shadow: 0 3px 4px 0 rgba(50, 50, 50, 0.62);
 }
 
 .top-bar__world-list-item {
@@ -92,99 +86,60 @@
   height: 48px;
 }
 
+$amount: 15%;
+
 .top-bar__world-list-item--otherworld {
   body.refugees & {
     background-color: $brand_core_family;
+    border-bottom: 1px solid lighten($brand_core_family, $amount);
   }
 
   body.family & {
     background-color: $brand_core_refugees;
+    border-bottom: 1px solid lighten($brand_core_refugees, $amount);
+
   }
 }
 
 .top-bar__world-list-item--worldhome {
   body.refugees & {
     background-color: $brand_core_refugees;
+    border-top: 1px solid lighten($brand_core_refugees, $amount);
+
   }
 
   body.family & {
     background-color: $brand_core_family;
+    border-top: 1px solid lighten($brand_core_family, $amount);
   }
 }
 
-//.nav-lang {
-//  color: $brand_white;
-//  font-size: 15px;
-//
-//  a {
-//    color: inherit;
-//    text-decoration: none;
-//    margin: 0 9px;
-//  }
-//}
-//
-//
-//
-//a.nav-lang__google {
-//  position: absolute;
-//  top: 7px;
-//  right: 10px;
-//  width: 60px;
-//  height: auto;
-//  margin: 0;
-//}
-//
-//button.nav-lang__button {
-//  background: image-url('ico_weltkugel.svg') no-repeat left center;
-//  width: 25px;
-//  height: 25px;
-//  float: left;
-//  margin: 8px 0;
-//  cursor: default;
-//
-//  body.family &,
-//  body.refugees & {
-//    background-color: transparent;
-//  }
-//}
-//
-//.nav-lang__languages {
-//  float: right;
-//}
-//
-//.nav-lang__list {
-//  margin: 0;
-//  padding: 0 0 0 30px;
-//  list-style: none;
-//  line-height: 44px;
-//
-//  li {
-//    margin: 0;
-//    padding: 0;
-//    float: left;
-//  }
-//
-//}
-//
-//.nav-lang__list--vertical {
-//  display: block !important; // override JS
-//  position: absolute;
-//  top: 44px;
-//  z-index: 400;
-//  background: $brand_blue;
-//  padding: 4px 0 10px;
-//
-//  li {
-//    float: none;
-//    padding: 0 11px;
-//    line-height: 30px;
-//  }
-//}
-//
-//.nav-lang__listitem--active {
-//  @extend %roboto_black;
-//
-//  body.ru & {
-//    font-weight: 700;
-//  }
-//}
+.top-bar__emphasis {
+  @extend %roboto_bold;
+}
+
+.top-bar__world-list-link--otherworld,
+.top-bar__world-list-link--worldhome {
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 0 15px 0 45px;
+  line-height: 48px;
+}
+
+.top-bar__world-list-link--otherworld {
+  background-image: image-url('ico_angle-right.svg');
+  background-size: 26px 26px;
+  background-position: 12px center;
+
+}
+
+.top-bar__world-list-link--worldhome {
+  background-image: image-url('ico_home.svg');
+  background-size: 20px 20px;
+  background-position: 16px center;
+
+
+}
