--- a/app/views/layouts/partials/_top_bar.slim
+++ b/app/views/layouts/partials/_top_bar.slim
@@ -1,15 +1,26 @@
 .top-bar
     .top-bar__container
-      / @Todo: Routes, Locale App labels:
+      / @TodoBeforePR: Labels i18n, href, also logic replacing XXX
       a.top-bar__world-link[href="#"] ‹ zurück zu XXXXXX
       .top-bar__world-select
         button.top-bar__world-select-button#top-bar__world-select-button[aria-label="Switch to other clarat section" aria-expanded="false"]
         .top-bar__world-select-overlay[aria-hidden="true"]
           ul.top-bar__world-list
             li.top-bar__world-list-item.top-bar__world-list-item--otherworld
-              a[href="#"] zu XXXXXXX wechseln
+              / @TodoBeforePR: Labels i18n, href, also logic replacing XXX and YYY
+              a.top-bar__world-list-link--otherworld[href="#"]
+                | zu
+                | &nbsp;
+                span.top-bar__emphasis XXXXXXX
+                | &nbsp;
+                | wechseln
             li.top-bar__world-list-item.top-bar__world-list-item--worldhome
-              a[href="#"] zur YYYYYY Startseite
+              a.top-bar__world-list-link--worldhome[href="#"]
+                | zur
+                | &nbsp;
+                span.top-bar__emphasis YYYYYYY
+                | &nbsp;
+                | Startseite
 
       .nav-lang
         button.nav-lang__button[aria-label="Switch language"]
