Improve arrow in mobile lang selection in header

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -89,6 +89,10 @@
     margin-left: 10px;
   }
 
+  button.nav-lang__button {
+    background-size: 42px auto;
+  }
+
   .Distributor {
     margin-top: 0;
     padding-bottom: 5px;
