--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -600,6 +600,11 @@
     display: none;
   }
 
+  .filter-form .result-order {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .filter-form__fieldset {
     padding: 0;
     flex: 1 0 100%;
