--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -4,6 +4,10 @@
 //
 // ---------------------------------------------------------------
 
+.Listing-results {
+  position: relative;
+}
+
 .Listing-results__pending-ajax {
   text-align: center;
   font-size: 40px;
