(Work in progress, changing computers)

--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -14,10 +14,8 @@
 }
 
 .header-main--wide {
-  height: 475px;
-  // border-top: 4px solid $brand_yellow; // disabled when banner is active
-  background: image-url('bg_scratches.jpg') no-repeat center bottom;
-  background-size: cover;
+  height: 290px;
+  background: $brand_beige;
 
   .template--pages-home & {
     margin-bottom: 0;
@@ -35,19 +33,21 @@
 .header-main__foreground {
   @extend %clearfix;
   height: inherit;
-  background-size: contain;
-
+  background-position: right bottom;
+  background-size: 60% auto;
 
   body.refugees & {
     background: image-url('foreground--refugees.svg');
     background-repeat: no-repeat;
-    background-position: 50% 100%;
+    background-position: right bottom;
+    background-size: 60% auto;
   }
 
   body.family & {
     background: image-url('foreground--family.svg');
     background-repeat: no-repeat;
-    background-position: 50% 100%;
+    background-position: right bottom;
+    background-size: 60% auto;
   }
 
   body.family &,
