--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -18,8 +18,7 @@
       position: relative;
       display: inline-block;
       float: left;
-      width: 45.165%;  // temp
-
+      width: 46.87%;
 
       body.ar & {
         float: right;
@@ -57,7 +56,6 @@
     position: relative;
     margin: 0 auto;
     padding: 30px 0 0;
-    width: 820px;
     display: inherit;
 
     #search_form_query,
@@ -70,7 +68,6 @@
     #search_form_query,
     #search_form_search_location {
       max-width: 100%;
-      width: 360px;
     }
   }
 
