--- a/app/assets/stylesheets/modules/_claim.scss
+++ b/app/assets/stylesheets/modules/_claim.scss
@@ -6,8 +6,8 @@
 
 .Claim {
   float: right;
-  margin-top: 92px;
-  margin-right: 35px;
+  margin-top: 43px;
+  margin-right: 15%;
   max-width: 30%;
 
   body.ar & {
@@ -15,9 +15,7 @@
   }
 }
 
-
-.Claim__firstrow,
-.Claim__secondrow {
+.Claim__firstrow {
   @extend %clarat_rounding;
   @extend %roboto_bold;
   display: inline-block;
@@ -26,9 +24,6 @@
   color: $brand_white;
   font-weight: 400;
   line-height: 1;
-}
-
-.Claim__firstrow {
   padding: 7px 9px 9px;
   font-size: 28px;
 }
@@ -38,4 +33,17 @@
   padding: 7px 9px 6px;
   font-size: 22px;
   line-height: 1.3;
+  position: absolute;
+  left: 0;
+  top: 160px;
+  max-width: 300px;
+
+  body.refugees & {
+    color: $brand_core_refugees;
+  }
+  body.family & {
+    color: $brand_core_family;
+
+  }
+
 }
