--- a/app/assets/stylesheets/form/_newsletter-subscribe.scss
+++ b/app/assets/stylesheets/form/_newsletter-subscribe.scss
@@ -11,6 +11,10 @@
     display: inline-block;
   }
 
+  label[for="subscription_email"] {
+    @extend %visually-hidden;
+  }
+
 }
 
 .newsletter-subscribe__input,
