--- a/app/assets/stylesheets/modules/_claim.scss
+++ b/app/assets/stylesheets/modules/_claim.scss
@@ -24,7 +24,7 @@
   color: $brand_white;
   font-weight: 400;
   line-height: 1;
-  padding: 7px 9px 9px;
+  padding: .3em .55em .4em;
   font-size: 28px;
 }
 
