--- a/app/assets/stylesheets/navigation/_nav-lang.scss
+++ b/app/assets/stylesheets/navigation/_nav-lang.scss
@@ -48,7 +48,7 @@ a.nav-lang__google {
   float: right;
   width: 60px;
   height: auto;
-  margin: 8px 20px 4px;
+  margin: 8px 0 4px 20px;
 
   img {
     width: inherit;
