--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -10,10 +10,6 @@
 
   // Header ######################################
 
-  .header-main--wide {
-    height: 375px; // smaller height, @ToDo refactoring into container with a certain ratio by paddding-bottom: 39.5833333%
-  }
-
   .Claim {
     max-width: 40%;
   }
@@ -86,7 +82,6 @@
   }
 
   #new_search_form {
-    width: 435px;
 
     .tt-dropdown-menu {
       margin-right: 0;
@@ -96,13 +91,11 @@
     #search_form_search_location {
 
       .template--pages-home & {
-        width: auto;
         max-width: none;
       }
     }
 
     .template--pages-home & {
-      max-width: 655px;
       width: auto;
 
       .input {
@@ -134,8 +127,9 @@
   }
 
   .nav-sections__list {
+    -js-display: flex;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .nav-sections__listitem {
@@ -194,6 +188,10 @@
 
   .content-main {
     padding-bottom: 0;
+
+    &.content-main--wide {
+      margin-top: 0;
+    }
   }
 
   .section-start {
