--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -24,6 +24,11 @@
 
   .top-bar__world-select-button {
     display: block;
+    background-position: left center;
+  }
+
+  .top-bar__container {
+    padding: 0 15px;
   }
 
   .top-bar__world-link {
@@ -54,9 +59,14 @@
   }
 
   .Claim {
-    padding-top: 90px;
+    padding-top: 10px;
     margin-top: 0;
     max-width: 100%;
+  }
+
+  .Claim__secondrow {
+    margin: 15px 0 0;
+    padding: 0;
   }
 
   .header-main {
