for #933 - track scroll and focus time for google analytics

--- a/app/views/offers/show/_who_section.html.slim
+++ b/app/views/offers/show/_who_section.html.slim
@@ -3,3 +3,4 @@
     h3.section-content__title = t '.heading'
     .section-content__body
         = render 'offers/show/who_contact_people', offer: offer
+    #scroll-goal
