Add icons to improved "off canvas nav"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@
 @import "navigation/nav-legal";
 @import "navigation/nav-welt";
 @import "navigation/nav-lang";
+@import "navigation/nav-off-canvas-trigger";
 
 @import "vendor/pagination";
 
