--- a/app/assets/stylesheets/modules/_tablist.scss
+++ b/app/assets/stylesheets/modules/_tablist.scss
@@ -2,7 +2,7 @@
   margin: 1em 0 0 ;
   padding: 0;
   list-style: none;
-  border-bottom: 3px solid $brand_yellow;
+  border-bottom: 3px solid $brand_brown;
 }
 
 .tablist__tab {
