Fix and optimize map-moving between sidebar and off canvas

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -48,6 +48,7 @@
     width: 100%;
     float: none;
     padding-left: calc(31% + 2px);
+    padding-top: 0;
 
     body.ar & {
       padding-right: calc(31% + 2px);
