--- a/app/assets/stylesheets/modules/_type-results.scss
+++ b/app/assets/stylesheets/modules/_type-results.scss
@@ -1,7 +1,7 @@
 .Type-results {
   @extend %clearfix;
   list-style: none;
-  margin: 25px 0 35px;
+  margin: 35px 0;
   padding: 0;
   border-bottom: 4px solid;
 
